--- a/kubernetes/apps/headlamp/headlamp/app/helmrelease.yaml
+++ b/kubernetes/apps/headlamp/headlamp/app/helmrelease.yaml
@@ -1,8 +1,8 @@
+---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: headlamp
-  namespace: monitoring
 spec:
   interval: 30m
   chart:
@@ -14,10 +14,5 @@ spec:
         name: headlamp
         namespace: flux-system
   values:
-    ingress:
-      enabled: true
-      hosts:
-        - host: headlamp.keatoncable.com
-          paths:
-            - path: /
-              type: Prefix
+    service:
+      type: ClusterIP
