--- a/kubernetes/apps/headlamp/headlamp/app/helmrepo.yaml
+++ b/kubernetes/apps/headlamp/headlamp/app/helmrepo.yaml
@@ -6,4 +6,4 @@ metadata:
   namespace: flux-system
 spec:
   interval: 30m
-  url: https://headlamp-k8s.github.io/headlamp/
+  url: https://kubernetes-sigs.github.io/headlamp/
