--- a/kubernetes/apps/monitoring/headlamp/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/headlamp/app/helmrelease.yaml
@@ -4,15 +4,10 @@ kind: HelmRelease
 metadata:
   name: headlamp
 spec:
-  interval: 30m
-  chart:
-    spec:
-      chart: headlamp
-      version: 0.25.0
-      sourceRef:
-        kind: HelmRepository
-        name: headlamp
-        namespace: flux-system
+  interval: 1hr
+  chartRef:
+    kind: OCIRepository
+    name: headlamp
   values:
     service:
       type: ClusterIP
