--- a/kubernetes/apps/monitoring/headlamp/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/headlamp/app/helmrelease.yaml
@@ -4,7 +4,7 @@ kind: HelmRelease
 metadata:
   name: headlamp
 spec:
-  interval: 1hr
+  interval: 1h
   chartRef:
     kind: OCIRepository
     name: headlamp
