--- a/kubernetes/apps/monitoring/headlamp/app/ocirepository.yaml
+++ b/kubernetes/apps/monitoring/headlamp/app/ocirepository.yaml
@@ -5,6 +5,9 @@ metadata:
   name: headlamp
 spec:
   interval: 15m
-  url: oci://ghcr.io/headlamp-k8s/charts/headlamp
+  layerSelector:
+    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
+    operation: copy
   ref:
     tag: 0.28.0
+  url: oci://ghcr.io/headlamp-k8s/charts/headlamp
