try headlamp with helmrelease

--- a/kubernetes/apps/monitoring/headlamp/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/headlamp/app/helmrelease.yaml
@@ -5,9 +5,14 @@ metadata:
   name: headlamp
 spec:
   interval: 1h
-  chartRef:
-    kind: OCIRepository
-    name: headlamp
+  chart:
+    spec:
+      chart: headlamp
+      version: 0.28.0
+      sourceRef:
+        kind: HelmRepository
+        name: headlamp
+        namespace: flux-system
   values:
     service:
       type: ClusterIP
