--- a/kubernetes/apps/security/authelia/app/helmrelease.yaml
+++ b/kubernetes/apps/security/authelia/app/helmrelease.yaml
@@ -17,24 +17,73 @@ spec:
     domain: keatoncable.com
     ingress:
       enabled: false
+    secret:
+      oidcPrivateKey:
+        value: |
+          -----BEGIN PRIVATE KEY-----
+          MIIJQwIBADANBgkqhkiG9w0BAQEFAASCCS0wggkpAgEAAoICAQDD/Qk8gbsQd1v5
+          HM+vVxpwFWIKbMLT8bXOAAye84eNrL27bewUcFVXVF7DP7cA2Qq3w5hrMozcfw+g
+          phWGGR2MUhRggR3CvSx3zKAn90wTM9rCbDfJlkfoGp7hnoUL7od+czlFsVEeIYm5
+          6LokcmTlafLRYLZIlez/UUnXlCbiftru2//YL9ac+aCEY4ELmF1cimXdMi+ogxQI
+          UkUQgtEDN6hG9eBpeKfF1AD/gIyepwySLu5583W/DOEwv1eknrxJp35txjRna6rE
+          ewjrw7Vc9niBPWpOEtBiTYsx4nt7cl7yuLMWpJeJTA6uiNuQdp/tonYWxe8emtI/
+          zmWkb4NLaBtShN6hcSc7SHQj2T2AiZvHrTMMgTjAy8++EICAsVIsQZQp2je9UW1B
+          /lGQd80XSuM5mmE0b1YRLI+b2Sp/k9Jhj5bifDWr4oPFbMgKwPSJbI3Ph16ZPPkb
+          Jnf8pfP+Dmt1gZH8E0Y6M32ZgLVvM9RJHtzeWdosGK8H9prwn+kzXrFBxMXCe0wR
+          EH36XqRNNB2DuSruQfANkuTDphN4+hI8qnmCNzj2easBIEtknBio5m5c863HGca7
+          wydDUZ64PmwjlS3cIVMUT32Ajck9T4SsrIHJ96JBWBqVhjppjhSvN9vGBLwKe0qi
+          u0gBf8Os9TEQh482okT9m/HYJvaBrQIDAQABAoICAFT8rfup+fda+uwcfUb4i4Nd
+          EmWY4idMIl1REif/TKG37ZKQSRZXo/oBoRIj1/SrKYWkcLzTb9fR1XIBc0XyMCkA
+          EswCUWh35geRGUYba8bL7qnuiYaF/2p72LfXqLQS3HiN+KDrElTxkCqo68cQQAZn
+          mh8HRCRXtyzEEDRGj1IaVk/L4Lbbj8IEUYH3MCdaC+osLZ3svFPje1Vcb4yIXaB6
+          iyMyTf0OkBouI7yn/tJxd/cQGOOTGlUdfa1I2/WLy/RYiG+Lyn+qZaPMAoNSG5xT
+          WNAaVL4EXM6z949LOea/IsM4KpjACOJFs/wlZqjPd+xxTan0bQulcVSv6M2UeacA
+          Gw+HgHNRmk17Inor4ILQB5xcGzJTdaCN3zPuoowphnSEQo42lCmL8Y8CJWX/kDZP
+          GWIrfDZvkaEgHzZKk68wsIMWQlg3HFLGpmzMFHS0TXmV0iPCOef3R8uML1/22MQW
+          WO+SFapPIzof6evEl2q2t+gsv4GaOccWu7Mt4Eud44vJocyCJgqh8+WAWbWJg++U
+          MgqgB60ht5hq6KsYX/7zOXetVbnmed1t8xr4erQ59xQ6N3GoAPkK4IvxiDSGyCID
+          dmaxT71zqlenajcrbL8fKMx1CL5A4sMQPL1IbWjj3NhCoMnHIHlT1b11a+uAmXUt
+          DZagZ0dn+rt+xN2uvJL1AoIBAQDgqumwvs2x4CoRFBwayFd1HxTEBDY0mtA0dTO2
+          Nz1j0FtwTnedwiLABw1jSI8zPYWIgnBiLoucPWbGbXkU1IiYvxBNlAv5eoM35vne
+          rkpn2xMSbtIEc81VbVYGFuHeECOmdoAnXpGdzsGk1XfM8+FgYZyfY+MXfu0Y4M5d
+          KoUk+e0aCqhv0gcYgqMJoDKVGf87qeSPaj0nEOkce86Ny4wN29wzO+FfVtkB7Iei
+          lQQRX4n2F1PKDqb9qof/KRlIQGSL9xeZ/Zi0pZ4YM/nHEH29PmsouJEexY7U1elS
+          Qqw67r64VzJImKvrl9jv5vQbmFSrpdPxmlM3dQCLHAd5AuxrAoIBAQDfUje/ZZ+J
+          NvN6DZqQKLraQVUO93zaNL5bmK4Gq0gKVBTXAn3qiWcBQFhVj7XMdFkhv8hWga3K
+          PafMQTEeYWzUbv6TMBTFMAxmP57qZRZzAUkjTztyj8Jj6dMgC/WHzyTrcoEjowwW
+          cLsEdrdgHVWYsRnCgSFwEaNvOmdPYS7KkH6e+CN9KLp1Ro5/p0qsHZzMgTds99Zy
+          5p4vEwwqAgwLJr1eH2Uncc2xrdZge/QYy6PCjhN/8vskX88uUEf4cgU4+IbqsN1S
+          04k1CsDMCYTG0cRAfnh5cIm7uTkmjGoo8qV+JfGb0KKh5y98JltC4ojmL+gnP5gJ
+          FTFzvY1pMNBHAoIBAQDOdSF1c5HQ8R+XPDSrhAmirqJFk11AsDe+zSltPIwkqncs
+          2F7h0WJfttdrnMx8kpA7SVbhEx1kpNcq4NGWh0AySuxLuhmJWhqOc7LDL2BfPek
+          y8QhpU0/QM95nxOHHqu0MFeKVkRYkYSv9h82b7Nf/7OPYZpxoAlAAG6DfSyHk0iI
+          0tyAjbBJnNs4YEe7bv12laRdCpMR0F939moVMcUNg0pypodwNn4LX5IxHOF1GafN
+          RxiPqTFaEJkTKXB7TflYCgRdVYc8EqoascDKZuQ1wSN2c02gyol8Gutj1bMyIO2Q
+          t0iVH/9068DGjSUsKqs8ZZJEBr6MSu/p5iMT2FTrAoIBAEXZH1qb3GQ8bbbVHmzM
+          cHTnTkVaHxDYwlk/zd6EIAoq9kGxo9SBmVgI2hgY1NHX6jDmHTEBamwBEMSP9177
+          NeDTvogm17g9KQOqDnhdmcHquwdyNrPERxadAc3aL7eEkJWbwMx2qO883yGsR/ql
+          8inJ6ratUNoOikG10K5BRTNSMmhiUCdLX9ZidRt0JaTjtjE4kS9h7Q8PFpa+rGVP
+          MpkiSsRvqWHG9IEIUC7pVhWTS+sEKREx3F8qIFDqBzir4PpKsVgibXcEdrvCWz72
+          EzNkVK+fXusMeePLVLjRCj+i8iC8ai8fsGI349DJ/QpiowEm+X6vADLQiZjOSGXh
+          O0CggEBAM/bsytt6zoBZmPY0fw7lZDC6dPeMzTfKq+BbDLKNMyNzCVyGywSsffN
+          gwGqhHPtBv094b5MCpGsTh+NMQKWSH1m2XNKavzxtKZ8Vpc2+WXFf3Ica+s2c5i
+          zSpG1zDavQzvGhgy2o0JHeXPdSisa+2GpGDzEmcSUNS1v0YwYC9cfnKdBHmoRLSD
+          Q0Pmp+QiVHci9JNwnre8flGkI/MiFLVAShQj2BKqYHOjtL3Iu72xRyYdqg5ndsvf
+          tf5Rv1URiwbNZTYH7A+WQsrZixfUaqMR6e2dvIpmd7O8kMVAYqCX6GKP+1p5xoDK
+          R36j5tActvIYS+bcElspb/KIACSVMU=
+          -----END PRIVATE KEY-----
+      oidcHMACSecret:
+        value: "6f1bd5516c7fe30b52813e43f6b1fe075bcb44a627fd29398867497237a71cf"
     pod:
       extraVolumeMounts:
         - name: users
           mountPath: /config/users.yaml
           subPath: users.yaml
-        - name: oidc-jwks
-          mountPath: /secrets/oidc-jwks
-          readOnly: true
       extraVolumes:
         - name: users
           secret:
             secretName: authelia-users
-        - name: oidc-jwks
-          secret:
-            secretName: authelia-oidc-jwks
     configMap:
-      filters:
-        enableTemplating: true
       authentication_backend:
         file:
           enabled: true
@@ -57,9 +106,6 @@ spec:
       identity_providers:
         oidc:
           enabled: true
-          hmac_secret: '{{ secret "/secrets/internal/identity_providers.oidc.hmac.key" }}'
-          jwks:
-            - key: '{{ secret "/secrets/oidc-jwks/rsa.pem" | mindent 14 "|" | msquote }}'
           cors:
             endpoints:
               - authorization
